# my-blog

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
blogapp/: admin.py  models.py  urls.py  views.py
blogapp/migrations/: 0001_initial.py  0002_author_email_address.py  0003_alter_post_image_name.py  0004_rename_image_name_post_image.py  0005_comment.py
blogapp/static/blogapp/: all-posts.css  index.css  post-detail.css
blogapp/templates/blogapp/: all-posts.html  index.html  post-detail.html
blogapp/templates/blogapp/includes/: post.html
core/: settings.py  urls.py
sambhav_dave/: asgi.py  settings.py  urls.py  wsgi.py
static/: app.css
templates/: 404.html  base.html
