[tool.poetry]
name = "blogapp"
version = "0.1.0"
description = ""
authors = ["Sambhav Dave <sambhavd4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.0.7"
markdown = "^3.6"
pygments = "^2.18.0"
pillow = "^10.4.0"
django-storages = "^1.14.4"
boto3 = "^1.34.149"

[tool.poetry.group.dev.dependencies]
autohooks = "^24.2.0"
autohooks-plugin-black = "^23.10.0"

[tool.autohooks]
mode = "poetry_multiline"
pre-commit = ["autohooks.plugins.black"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
